Refactor FlappyAnsh to FlappyAnshPro with enhancements
Renamed FlappyAnsh class to FlappyAnshPro and updated related references. Adjusted difficulty jump values, added power-up mechanics, and improved particle effects.